# rnd

./: .gitignore  Makefile  README.md  build.sh  graphical-l-systems.ipynb
_data/: overleaf_markdown.json  recipe.json
addref/: README.md  addref  addref.js  addref.sh  annotatepdf  batch_annotate_rp1
autostereogram/: README.md
brot/: Cargo.toml  README.md
cloudtabs/: cloudtabs2html.py
cs315h/: README.md
cs315h-prog3/: README.md  critter-java-signatures.md  critter.py  requirements.txt  test.py
docs/: README.md  build.sh  tree-in-wind.ipynb
dwm-monster-planner/: index.28896b42.js  index.28896b42.js.map  index.3855ba88.css  index.3855ba88.css.map  index.fbfd09f6.css  index.fbfd09f6.css.map  index.html  package-lock.json  package.json
ezproxy-redirect/: background.js  manifest.json
generate-favorite-wallpaper/: README.md  exploring-wallpaper-generation.ipynb  generate-my-favorite-wallpaper.py
hippocampus-predictive-map/: README.md  sr.ipynb
html-calendar/: README.md  calendar.html
iphone-sms-backup/: sample.json  sms-backup.py  template.html
lil-pomo/: index.html
mbc-webcal/: README.md  app.py  requirements.txt
mcmtg/: .gitignore  Cargo.toml  README.md  plot.py
mcmtg/src/: main.rs
minimally-cognitive-behavior/: index.html  index.js  package.json  webpack.config.js
old-home-page/: index.html
overleaf-markdown/: Makefile  README.md  index.md  make.py  markdown-it-katex.js  overleaf-markdown.js
radio-shack-scale/: .basic.py.swp  Cargo.toml  README.md  basic.py  main.py
ray-tracer-challenge/: .gitignore  Cargo.toml  README.md
(+154 files in other folders)
