[package]
name = "mcmtg"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
derivative = "2.2.0"
itertools = "0.14.0"
json = "0.12.4"
meansd = "2.1.0"
ordered-float = "5.0.0"
pathfinding = "4.14.0"
# pathfinding = { path = "./pathfinding" }
rand = "0.8.5"
statrs = "0.18.0"
